# packages/api/src/index.ts
@@ -49,3 +49,10 @@ export type GrantAdmin = components['schemas']['GrantAdminDto'];
 export type TickWeather = components['schemas']['TickWeatherDto'];
 export type WeatherLookup = components['schemas']['WeatherLookupDto'];
 export type WeatherBackfill = components['schemas']['WeatherBackfillDto'];
+export type SectorConditions = components['schemas']['SectorConditionsDto'];
+export type ConditionsDay = components['schemas']['ConditionsDayDto'];
+export type ConditionsHour = components['schemas']['ConditionsHourDto'];
+export type ConditionBand = NonNullable<ConditionsDay['band']>;
+export type Shelter = Sector['shelter'];
+export type SunInterval = components['schemas']['SunIntervalDto'];
+export type HorizonBackfill = components['schemas']['HorizonBackfillDto'];
